--- a/prod-assets/scss/_variables.scss
+++ b/prod-assets/scss/_variables.scss
@@ -5,6 +5,8 @@ $white : #fff;
 $black: #000;
 $primary: #ea6f00;
 $secondary: #ed9200;
+$text: #1b262c;
+$bg-nav-color: #393e46;
 
 
 // Breakpoints
