Changes in services and new styles for team section
In team section I added overlay on hover.
And also change background-attachment to fixed which help us
achive parallax effect on slider image.

--- a/prod-assets/scss/_about-us.scss
+++ b/prod-assets/scss/_about-us.scss
@@ -26,4 +26,33 @@
         line-height: 24px;
         font-family: 'Poppins', sans-serif;
     }
+    &__left{
+        animation: fromLeft 3s ease;
+    }
+    &__right{
+        animation: fromRight 3s ease;
+    }
+
+    @keyframes fromLeft {
+        0%{
+            transform: translateX(-100px);
+            opacity: 0;
+        }
+        100%{
+            transform: translateX(0);
+            opacity: 1;
+
+        }
+    }
+    @keyframes fromRight {
+        0%{
+            transform: translateX(100px);
+            opacity: 0;
+        }
+        100%{
+            transform: translateX(0);
+            opacity: 1;
+
+        }
+    }
 }
