--- a/prod-assets/scss/_services.scss
+++ b/prod-assets/scss/_services.scss
@@ -15,10 +15,9 @@
         position: relative;
         transition: .5s ease-in-out;
 
-
         &:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 10px $black;
+
         }
 
     }
@@ -32,5 +31,53 @@
     &__text {
         font-family: 'Poppins';
         color:$black;
+
     }
+    &__text &__show &__more{
+        display: inline;
+    }
+
+    &__more{
+        display: none;
+    }
+
+
 }
+.showmore {
+    font-size: 1.1em;
+    margin-top: 1.5em;
+  }
+
+  .showmore .more {
+    display: none;
+  }
+
+  .showmore.show .more {
+    display: inline;
+  }
+  .showmore.show .dots{
+      display: none;
+  }
+
+  .showmore a {
+    cursor: pointer;
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    font-weight: bold;
+  }
+  .showmore .btn{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color:$primary!important;
+    text-align: center;
+    padding-top: 10px;
+    transition: .6s;
+
+    &:hover {
+        opacity: .6;
+    }
+  }
+
+
