--- a/prod-assets/scss/_slider.scss
+++ b/prod-assets/scss/_slider.scss
@@ -5,21 +5,37 @@
 
     &__first-slide {
         background: url(../img/hero/slider1.jpg) center center /cover;
-        height: 100vh;
+        height: 60vh;
         max-width: 100%;
+        @include medium-up{
+            height: 100vh;
+        }
     }
     &__second-slide {
         background: url(../img/hero/slider2.jpg) center center /cover;
-        height: 100vh;
+        height: 60vh;
         max-width: 100%;
+        @include medium-up{
+            height: 100vh;
+        }
+
+
+    }
+    &__first-slide, &__second-slide {
+        position: relative;
+        background-attachment: fixed; // parallax effect
 
 
     }
     &__caption{
         position: absolute;
-        top:250px;
+        top:150px;
         left:5%;
         user-select: none;
+        @include medium-up{
+            top:300px;
+            left:0;
+        }
         @include large-up{
             top:350px;
             left:0;
@@ -27,9 +43,13 @@
     }
     &__second-caption{
         position: absolute;
-        top:300px;
-        left:5%;
+        top:150px;
+        left:2%;
         user-select: none;
+        @include medium-up{
+            top:350px;
+            left:0;
+        }
         @include large-up{
             top:400px;
             left:-10%;
