Styles for others sections
This folder consist of files to style specific elements on site, which
are compresed to css later.

--- a/prod-assets/scss/style.scss
+++ b/prod-assets/scss/style.scss
@@ -8,3 +8,7 @@
 @import '_about-us.scss';
 @import '_services.scss';
 @import '_team.scss';
+@import '_pricing.scss';
+@import '_discount.scss';
+@import '_counter.scss';
+@import '_footer.scss';
