Changes in styles to make this site full responsive

--- a/prod-assets/scss/_counter.scss
+++ b/prod-assets/scss/_counter.scss
@@ -4,9 +4,10 @@
         font-weight: bold;
         font-size: 36px;
         border-bottom: 1px solid $primary;
-        width: 50%;
+        width: 75%;
         display: block;
         margin: 0 auto;
+        text-align: center;
 
     }
     &__icon {
