--- a/prod-assets/scss/_default.scss
+++ b/prod-assets/scss/_default.scss
@@ -5,10 +5,15 @@
     font-family: 'Oswald', sans-serif;
     font-weight: normal;
 
+
+
 }
 
-body {
+html,body {
     font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 button {
     outline: 0!important;
