--- a/prod-assets/scss/_discount.scss
+++ b/prod-assets/scss/_discount.scss
@@ -3,7 +3,7 @@
     &__bg{
 
         background: url(../img/discount/bg.png) center center /cover;
-        height: 80vh;
+        height: 120vh;
         background-attachment: fixed;
         @include medium-up{
             height: 50vh;
@@ -11,8 +11,8 @@
     }
     &__heading {
         margin-top: 60px;
-        font-family: 'Poppins';
-
+        font-family: 'Poppins', sans-serif;
+        text-align: center;
 
         @include medium-up{
             margin-top: 10px;
