--- a/prod-assets/scss/_slider.scss
+++ b/prod-assets/scss/_slider.scss
@@ -3,18 +3,20 @@
     position: relative;
 
 
+
+
     &__first-slide {
         background: url(../img/hero/slider1.jpg) center center /cover;
-        height: 60vh;
-        max-width: 100%;
-        @include medium-up{
+        height: 80vh;
+        width: 100vw;
+            @include medium-up{
             height: 100vh;
         }
+
     }
     &__second-slide {
         background: url(../img/hero/slider2.jpg) center center /cover;
-        height: 60vh;
-        max-width: 100%;
+        height: 80vh;
         @include medium-up{
             height: 100vh;
         }
@@ -29,7 +31,7 @@
     }
     &__caption{
         position: absolute;
-        top:150px;
+        top:180px;
         left:5%;
         user-select: none;
         @include medium-up{
@@ -43,7 +45,7 @@
     }
     &__second-caption{
         position: absolute;
-        top:150px;
+        top:180px;
         left:2%;
         user-select: none;
         @include medium-up{
@@ -120,4 +122,5 @@
 
 
 }
+
 
