--- a/prod-assets/scss/style.scss
+++ b/prod-assets/scss/style.scss
@@ -5,6 +5,7 @@
 @import '_slider.scss';
 @import '_header.scss';
 @import '_preloader.scss';
+@import '_portfolio.scss';
 @import '_about-us.scss';
 @import '_services.scss';
 @import '_team.scss';
